--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
+    <div class="">
+      <div class="">
         {{ content }}
       </div>
     </div>
