[View] Structure of index.html

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1,6 +1,6 @@
 /* ONLY Extra small devices (phones, less than 768px) */
 @media (max-width: 768px) {
-    section#contact * {
+    header, section#contact * {
         text-align: center;
     }
 
