--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,8 +21,11 @@
         Administración y Vinculación.
         <br>Tel. 6623&#8209;02&#8209;60&#8209;54
         <br id="tmp">
-        <a class="mail-to" href="mailto:movimientoras@hotmail.com">¡Mandanos un correo!</a>
+        <a class="mail-to" href="mailto:movimientoras@hotmail.com">¡Mandanos un correo!</a><br>
+        <a href="https://www.facebook.com/MovimientoRasXLosNinosConCancerIap"><i class="fa fa-facebook-square"></i> Visitanos en facebook!</a>
       </p>
+    </div>
+    <div class="col-sm-4 text-center">
     </div>
     <div class="col-sm-4 text-right">
       <p>
@@ -33,15 +36,3 @@
     </div>
   </div>
 </section>
-
-<footer class="container text-center footer">
-    <div class="row">
-      <div class="col-lg-4 text-center col-lg-offset-4">
-        Todos los derechos reservados. Movimiento RAS I.A.P
-      </div>
-    </div>
-</footer>
-
-<script>
-  document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
-</script>
