--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,4 @@
-<section id="contact" class="container">
-  <div class="row">
-    <div class="col-lg-8 col-lg-offset-2 text-center">
-      <h1>Contacto</h1>
-    </div>
-  </div>
-
+<section id="footer" class="container footer">
   <div class="row">
     <div class="col-sm-8 text-left col-sm-offset-2">
       <h3>Movimiento RAS I.A.P</h3>
