--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1,16 +1,122 @@
+body {
+  width: 100%;
+  height: 100%;
+}
+
+html {
+  width: 100%;
+  height: 100%;
+}
+
+section#footer {
+  width: 100%;
+  height: auto;
+  color: #fff;
+  background: url(/assets/img/footer.png) no-repeat scroll;
+  word-break: keep-all;
+
+  background-color: #000;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  background-attachment: scroll;
+}
+
+.footer {
+  a {
+    color: #ecf0f1;
+    text-decoration: underline;
+  }
+}
+
+.navbar {
+  margin-bottom: 0;
+}
+
+.btn {
+  background-color: transparent;
+  background-image: url(/assets/img/ui/btn-u.svg);
+  background-size: 100% auto;
+  border-radius: 0;
+
+  text-transform: uppercase;
+  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 1.7em;
+
+  display: inline-block;
+  text-align: center;
+  color: white;
+
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+
+  &:active {
+    background-image: url(/assets/img/ui/btn-u.svg);
+  }
+}
+
+.btn-pink {
+  background-image: url(/assets/img/ui/btn-p.svg);
+  &:active {
+    background-image: url(/assets/img/ui/btn-p.svg);
+  }
+}
+
+.cooperason__svg-cooperason {
+  width: 100%;
+}
+
+.header-index {
+  background: url(/assets/img/banner-index.png) no-repeat bottom center scroll;
+}
+
+.header-cooperason {
+  background: url(/assets/img/banner-cooperason.png) no-repeat bottom center scroll;
+}
+
+.header-conocenos {
+  background: url(/assets/img/banner-conocenos.png) no-repeat bottom center scroll;
+}
+
+.header {
+  display: table;
+  width: 100%;
+  height: auto;
+  text-align: left;
+  color: #fff;
+  background-color: #000;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
+.header-body {
+  display: table-cell;
+  padding-top: 70px;
+  vertical-align: middle;
+}
+
+
+
 /* ONLY Extra small devices (phones, less than 768px) */
 @media (max-width: 768px) {
-    header, section#contact * {
-        text-align: center;
-    }
+  header, section#contact * {
+    text-align: center;
+  }
 
-    .navbar-toggle * {
-      display: block;
-    }
+  .navbar-toggle * {
+    display: block;
+  }
 }
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-
+  .header {
+    height: 100%;
+    padding: 0;
+  }
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -21,8 +127,4 @@
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
 
-}
-
-.footer {
-    width: 100%;
 }
